# flisp_sim

./: .gitignore
flisp_lib/: Cargo.toml
flisp_lib/src/: addressing.rs  generated.rs  instructions.rs  lib.rs  processor.rs
flisp_tui/: Cargo.toml
lib/: build.rs
lib/src/: addressing.rs  error.rs  instructions.rs  lib.rs  processor.rs
lib/src/reference/: converter.mjs  operations.mjs
tui/: Cargo.toml
tui/src/: error.rs  io_device.rs  main.rs
