[package]
name = "flisp_tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flisp_lib = {path = "../lib"}
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
crossterm = "0.19.0"
